revert changes to bare minimum