@@ -19,12 +19,10 @@
 package co.elastic.apm.agent.test;
 
 import java.io.IOException;
-import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Objects;
-import java.util.regex.Pattern;
 
 /**
  * Provides access to packaged agent artifacts
@@ -51,21 +49,21 @@ public class AgentFileAccessor {
                 break;
         }
         return getArtifactPath(
-            Paths.get(project),
+            Path.of("elastic-apm-agent"),
             "",
             ".jar");
     }
 
     public static Path getPathToAttacher() {
         return getArtifactPath(
-            Paths.get("apm-agent-attach-cli"),
+            Path.of("apm-agent-attach-cli"),
             "",
             ".jar");
     }
 
     public static Path getPathToSlimAttacher() {
         return getArtifactPath(
-            Paths.get("apm-agent-attach-cli"),
+            Path.of("apm-agent-attach-cli"),
             "-slim",
             ".jar");
     }
@@ -102,20 +100,14 @@ public class AgentFileAccessor {
                 throw new IllegalStateException(errorMsg);
             }
 
-            Pattern pattern = Pattern.compile(artifactName + "-\\d\\.\\d+\\.\\d+(\\.RC\\d+)?(-SNAPSHOT)?" + artifactSuffix + extension);
-            try (DirectoryStream<Path> stream = Files.newDirectoryStream(targetFolder)) {
-                for (Path filePath : stream) {
-                    if (pattern.matcher(filePath.getFileName().getFileName().toString()).matches()) {
-                        return filePath.toAbsolutePath();
-                    }
-                }
-            }
-
-        } catch (IOException e){
+            return Files.find(targetFolder, 1, (path, attr) -> path.getFileName().toString()
+                    .matches(artifactName + "-\\d\\.\\d+\\.\\d+(\\.RC\\d+)?(-SNAPSHOT)?" + artifactSuffix + extension))
+                .findFirst()
+                .map(Path::toAbsolutePath)
+                .orElseThrow(() -> new IllegalStateException(errorMsg));
+        } catch (IOException e) {
             throw new IllegalStateException(e);
         }
-
-        throw new IllegalStateException();
     }
 
 }
